MODLD-817: publication frequency mapping from 008/18 & 008/19 (#131)
* MODLD-817: 310 mapping removed

* MODLD-817: publication frequency mapping from 008/18 & 008/19